--- a/MVCDemoData/Views/Userinfo/Create.cshtml
+++ b/MVCDemoData/Views/Userinfo/Create.cshtml
@@ -17,41 +17,40 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            @Html.LabelFor(model => model.Firstname, htmlAttributes: new
-            {
-                 @class = "control-label col-md-2"
-             }) <
+        <div class="row">
+            <div class="col-lg-2">First Name</div>
+            <div class="col-lg-10">
+                @Html.TextBoxFor(model => model.Firstname, new { @class = "form-control" })
+            </div>
         </div>
 
     </div>
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            @Html.LabelFor(model => model.LastName, htmlAttributes: new
-            {
-                 @class = "control-label col-md-2"
-             }) <
+        <div class="row">
+            <div class="col-lg-2">Last Name</div>
+            <div class="col-lg-10">
+                @Html.TextBoxFor(model => model.LastName, new { @class = "form-control" })
+            </div>
         </div>
 
     </div>
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new
-            {
-                 @class = "control-label col-md-2"
-             }) <
+         <div class="row">
+            <div class="col-lg-2">Email</div>
+            <div class="col-lg-10">
+                @Html.TextBoxFor(model => model.Email, new { @class = "form-control" })
+            </div>
         </div>
-
-    </div>
+     </div>
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            @Html.LabelFor(model => model.Address, htmlAttributes: new
-            {
-                 @class = "control-label col-md-2"
-             }) <
+        <div class="row">
+            <div class="col-lg-2">Address</div>
+            <div class="col-lg-10">
+                @Html.TextBoxFor(model => model.Address, new { @class = "form-control" })
+            </div>
         </div>
-
     </div>
+    
 
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
@@ -60,7 +59,7 @@
         </div>
 
     </div>
-</div>
+   </div>
 }
 
 <div>
