create edit update

--- a/MVCDemoData/Views/Userinfo/Create.cshtml
+++ b/MVCDemoData/Views/Userinfo/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVCDemoData.Models.UserinfoModel
+﻿@model MVCDemoData.Models.StudentInfo
 
 @{
     ViewBag.Title = "Create";
@@ -59,7 +59,7 @@
         </div>
 
     </div>
-   </div>
+</div>
 }
 
 <div>
