--- a/MVCDemoData/Views/Shared/_Layout.cshtml
+++ b/MVCDemoData/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Edit", "Edit", "Home")</li>
+                    <li>@Html.ActionLink("User List", "Index", "UserInfo")</li>
                     <li>@Html.ActionLink("Create", "Create", "Home")</li>
 
                 </ul>
