--- a/MVCDemoData/Views/Userinfo/Create.cshtml
+++ b/MVCDemoData/Views/Userinfo/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model MVCDemoData.Models.StudentInfo
+﻿@model MVCDemoData.Controllers.UserinfoModel
+
 
 @{
     ViewBag.Title = "Create";
@@ -7,59 +8,59 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-<div class="form-horizontal">
-    <h4>UserinfoModel</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-    <div class="form-group">
-        <div class="row">
-            <div class="col-lg-2">First Name</div>
-            <div class="col-lg-10">
-                @Html.TextBoxFor(model => model.Firstname, new { @class = "form-control" })
+    <div class="form-horizontal">
+        <h4>UserinfoModel</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+        <div class="form-group">
+            <div class="row">
+                <div class="col-lg-2">First Name</div>
+                <div class="col-lg-10">
+                    @Html.TextBoxFor(model => model.Firstname, new { @class = "form-control" })
+                </div>
+            </div>
+
+        </div>
+        <div class="form-group">
+            <div class="row">
+                <div class="col-lg-2">Last Name</div>
+                <div class="col-lg-10">
+                    @Html.TextBoxFor(model => model.LastName, new { @class = "form-control" })
+                </div>
+            </div>
+
+        </div>
+        <div class="form-group">
+            <div class="row">
+                <div class="col-lg-2">Email</div>
+                <div class="col-lg-10">
+                    @Html.TextBoxFor(model => model.Email, new { @class = "form-control" })
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="row">
+                <div class="col-lg-2">Address</div>
+                <div class="col-lg-10">
+                    @Html.TextBoxFor(model => model.Address, new { @class = "form-control" })
+                </div>
             </div>
         </div>
 
-    </div>
-    <div class="form-group">
-        <div class="row">
-            <div class="col-lg-2">Last Name</div>
-            <div class="col-lg-10">
-                @Html.TextBoxFor(model => model.LastName, new { @class = "form-control" })
-            </div>
-        </div>
 
-    </div>
-    <div class="form-group">
-         <div class="row">
-            <div class="col-lg-2">Email</div>
-            <div class="col-lg-10">
-                @Html.TextBoxFor(model => model.Email, new { @class = "form-control" })
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
-        </div>
-     </div>
-    <div class="form-group">
-        <div class="row">
-            <div class="col-lg-2">Address</div>
-            <div class="col-lg-10">
-                @Html.TextBoxFor(model => model.Address, new { @class = "form-control" })
-            </div>
+
         </div>
     </div>
-    
-
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
-        </div>
-
-    </div>
-</div>
 }
 
 <div>
