--- a/MVCDemoData/Views/Userinfo/Index.cshtml
+++ b/MVCDemoData/Views/Userinfo/Index.cshtml
@@ -25,9 +25,9 @@
             <td>@item.Email</td>
             <td>@item.Address</td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new {  id=item.ID  }) |
+                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
 
 
             </td>
