--- a/MVCDemoData/Views/Userinfo/Edit.cshtml
+++ b/MVCDemoData/Views/Userinfo/Edit.cshtml
@@ -26,7 +26,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.LName, htmlAttributes: new { @class = "control-label col-md-2" })
+            /@Html.LabelFor(model => model.LName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.LName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.LName, "", new { @class = "text-danger" })
